<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:scrollbars="vertical">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icon" android:paddingTop="20dp" android:paddingBottom="20dp"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" android:paddingBottom="10dp" android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits1"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_title"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_0"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_1"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grav_equation_1" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_2"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grav_equation_2" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_4"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grav_equation_3" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_5"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grav_equation_4" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_6"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_7"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_physics_8"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_display_title"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingTop="10dp" android:layout_marginTop="20dp" android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_display_1"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_display_2"
            android:textAppearance="?android:attr/textAppearanceSmall" android:paddingBottom="10dp" />

    </LinearLayout>

</ScrollView>